--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist",
     "build": "npm run clean && npm run build:tsc",
     "build:tsc": "tsc",
-    "dev": "tsx --require ./node_modules/dotenv/config src/index.ts",
+    "dev": "tsx watch --require ./node_modules/dotenv/config src/index.ts",
     "start": "node dist/index.js"
   },
   "keywords": [],
