--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@trigger.dev/sdk": "^0.2.16-next.3",
-    "@trigger.dev/slack": "^0.1.23-next.3",
+    "@trigger.dev/sdk": "^0.2.15",
+    "@trigger.dev/slack": "^0.1.22",
     "zod": "^3.20.2"
   },
   "devDependencies": {
