--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "typescript": "^4.9.4"
   },
   "triggerdotdev": {
-    "template": "hello-world"
+    "template": "scheduled-healthcheck"
   }
 }
