--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@trigger.dev/sdk": "^0.2.21",
-    "@trigger.dev/slack": "^0.1.27",
+    "@trigger.dev/sdk": "^0.2.22-next.0",
+    "@trigger.dev/slack": "^0.1.28-next.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
