[triggerbot] Updated packages @trigger.dev/sdk, @trigger.dev/slack

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@trigger.dev/sdk": "^0.2.22-next.0",
-    "@trigger.dev/slack": "^0.1.28-next.0",
+    "@trigger.dev/sdk": "^0.2.22",
+    "@trigger.dev/slack": "^0.1.27",
     "zod": "^3.20.2"
   },
   "devDependencies": {
